# SB-Firmware-V1

./: CMakeLists.txt
main/: CMakeLists.txt  LTC2449.h  main.c  motor.h
